tests/chainsaw/disallow-host-path/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-host-path
spec:
  steps:
  - name: create a bad pod with hostPath volume
    try:
    - create:
        expect:
        - check:
            ($error != null): true
        file: bad-pod.yaml
  - name: create a good pod without hostPath volume
    try:
    - create:
        expect:
        - check:
            ($error != null): false
        file: good-pod.yaml
